fixed spacing and added pixelated buttons and fixed the fonts

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -109,7 +109,7 @@ body {
   deleted font-family: -apple-system, BlinkMacSystemFont, "Open Sans", sans-serif,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif; */
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "American Typewriter", Georgia, "Times New Roman", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
